[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Stations/station_combiner_empty.png" type="Texture" id=1]
[ext_resource path="res://Stations/CombinatorSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Stations/Combinator.gd" type="Script" id=3]

[node name="Combinator" type="Node2D"]
script = ExtResource( 3 )

[node name="station_combiner_empty" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="CombinatorSlot0" parent="." instance=ExtResource( 2 )]
position = Vector2( 131.245, 34.2575 )

[node name="CombinatorSlot1" parent="." instance=ExtResource( 2 )]
position = Vector2( 216.907, 173.158 )
slot_num = 1

[node name="CombinatorSlot2" parent="." instance=ExtResource( 2 )]
position = Vector2( 40.6292, 181.521 )
slot_num = 2
[connection signal="click_on_combinator_slot" from="CombinatorSlot0" to="." method="click_on_combinator_slot"]
[connection signal="click_on_combinator_slot" from="CombinatorSlot1" to="." method="click_on_combinator_slot"]
[connection signal="click_on_combinator_slot" from="CombinatorSlot2" to="." method="click_on_combinator_slot"]
